# tp-causapscal-des-vents

./: .gitignore  README.md  models.toml  pyproject.toml  ruff.toml
causapscal/: __init__.py  defaults.py  files.py  lens.py  memory.py  types.py
causapscal/templates/: gemma2_2b.jinja2
datasets/: advbench_alpaca.json  advbench_modified.json  bomb_extension.json  minibench.json
tp/: analysis.py  heads.ipynb  sae.ipynb  steering.ipynb  steering_lens.ipynb  steering_lens_.ipynb  tp_hermione.ipynb
